--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <nav>
-            <a href="#">mystuff</a>
+            <a href="#">
+                    <img src="{% static 'icons/logotipoInverted.svg' %}" alt="" height="15">
+                    def Diego():
+            </a>
             <a href="#">contact</a>
         </nav>
         <div class="contenido">
@@ -29,9 +32,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ullamcorper non nunc id maximus. Mauris suscipit, purus sed dictum egestas, metus justo consectetur arcu, quis scelerisque ante purus non justo.</p>
                 </section>
                 <div class="imgGroup">
-                    <img src="{% static 'images/work1.png' %}" alt="diego">
-                    <img src="{% static 'images/work2.png' %}" alt="">
-                    <img src="{% static 'images/work3.png' %}" alt="">
+                    <img class="generic" src="{% static 'images/work1.png' %}" alt="diego">
+                    <img class="generic" src="{% static 'images/work2.png' %}" alt="">
+                    <img class="generic" src="{% static 'images/work3.png' %}" alt="">
                 </div>
             <hr>
             <section>
