--- a/templates/home.html
+++ b/templates/home.html
@@ -9,10 +9,7 @@
     </head>
     <body>
         <nav>
-            <a href="#">
-                    <img src="{% static 'icons/logotipoInverted.svg' %}" alt="" height="15">
-                    def Diego():
-            </a>
+            <a href="#">def Diego():</a>
             <a href="#">contact</a>
         </nav>
         <div class="contenido">
