Se hace apto para moviles

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,12 +17,12 @@
                     <h1>def Diego():</h1>
                     <h2><span>WHOISDIEGO<span></h1>
                     <div class="info">
-                        <p>Hi, I'm Diego Morales.</p>
-                        <p>I'm a web developer whos loves work with <strong>Python</strong>, currently I'm pursuing a master's degree in software engineerings.</p>
+                        <p>Hi, I'm Diego Morales.<br>
+                        I'm a web developer whos loves work with <strong>Python</strong>, currently I'm pursuing a master's degree in software engineerings.</p>
                         <p class="importante"><strong>At the moment I'm engaged to simple, minimal design & typography and this is my first online porfolio. Feel free to explore & tell me what you think about it!</strong></p>
                     </div>
                 </section>
-            <hr>
+                <hr>
                 <section>
                     <h2><span>RECENT WORK<span></h1>
                     <div class="info">
@@ -42,6 +42,9 @@
                 </div>
             </section>
         <hr>
+        <footer>
+            <p class="footerP">©2022 Diego Morales. All Rights Reserved.</p>
+        </footer>
         </div>
 
     </body>
