--- a/portfolioapp/static/css/base.css
+++ b/portfolioapp/static/css/base.css
@@ -31,18 +31,18 @@ p {
     line-height: 1.4em;
     letter-spacing: 0.01em;
     word-spacing: 0.01em;
-    padding: 0px 10px;
+    padding: 15px;
 }
 
 nav {
+    position: fixed;
+    width: 100%;
     display: flex;
+    top: 0px;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 80px;
     background-color: #2b292c;
-
 }
-
 
 a {
     text-decoration: none;
@@ -66,8 +66,15 @@ h2 {
 h2 span {
     background: #f9f9f9;
     padding-left: 20px;
-
 }
+
+.contenido{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    margin-top: 120px;
+}
+
 section{
     max-width: 600px;
     display: flex;
@@ -82,15 +89,12 @@ h1{
     margin-bottom: 20px;
 }
 
-.contenido{
+.imgGroup {
     display: flex;
-    flex-flow: column;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.importante {
-    margin-top: 20px;
-}
 
 img.generic {
     margin: 20px;
@@ -101,4 +105,25 @@ hr {
     width: 100%;
     color: #eaedf0;
     margin: 50px 0px;
+}
+footer {
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2b292c;
+    color: #f9f9f9;
+    width: 100%
+}
+p.footerP {
+    padding: 0px;
+}
+
+
+
+@media only screen and (max-width: 900px) {
+    h1 {
+        position: static;
+        right: 30px;
+    }
 }
