--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,11 @@
     <body>
         <nav>
             <a href="#">def Diego():</a>
-            <a href="#">contact</a>
+            <div class="links">
+                <a href="#">contact</a>
+                <a href="#">about</a>
+            </div>
+
         </nav>
         <div class="contenido">
                 <section>
@@ -18,8 +22,9 @@
                     <h2><span>WHOISDIEGO<span></h1>
                     <div class="info">
                         <p>Hi, I'm Diego Morales.<br>
-                        I'm a web developer whos loves work with <strong>Python</strong>, currently I'm pursuing a master's degree in software engineerings.</p>
-                        <p class="importante"><strong>At the moment I'm engaged to simple, minimal design & typography and this is my first online porfolio. Feel free to explore & tell me what you think about it!</strong></p>
+                        I'm a web developer based in <strong>Guadalajara, Mexico</strong> whos loves work with <strong>Python</strong>, currently I'm pursuing a master's degree in software engineerings.</p>
+                        <p class="importante">At the moment I'm engaged to simple, minimal design & typography and this is my first online porfolio. Feel free to explore & tell me what you think about it!</p>
+                        <p><a class="inlineLink"href="#"><strong>More about me? Oh...</strong></a> </p>
                     </div>
                 </section>
                 <hr>
@@ -35,10 +40,25 @@
                 </div>
             <hr>
             <section>
-                <h2><span>EDUCATION<span></h1>
+                <h2><span>BOOKS?<span></h1>
                 <div class="info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ullamcorper non nunc id maximus. Mauris suscipit, purus sed dictum egestas, metus justo consectetur arcu, quis scelerisque ante purus non justo.</p>
-                    <p class="importante"><strong>At the moment I'm engaged to simple, minimal design & typography. This is my first online porfolio. Feel free to explore & tell me what you think about it!</strong></p>
+
+                    <p><strong>That's incredible what you can learn in books.</strong></p>
+                    <p>This is a few books recommendations that really improved my knowledge about the Web, Python, Django, CSS... Just have a look if you're interested in improving your skills.</p>
+                    <span><h3>Python</h3><span>
+                    <ul>
+                        <li><a class="inlineLink" href="https://nostarch.com/pythoncrashcourse2e"><strong>Python Crash Course:</strong></a>This book was my first approach in my way to learn Python, it's all what you need if you know nothing about the language.</li>
+                        <li><a class="inlineLink" href="https://realpython.com/products/python-basics-book/"><strong>Python Basics:</strong></a>A book written by Dan Bader, (My favorite Pythonista) the most complete guide of all the basic stuff that you need to work with Python.</li>
+                        <li><a class="inlineLink" href="https://realpython.com/products/python-tricks-book/"><strong>Python Tricks:</strong></a>Another book by Dan Bader, in this one Dan talks about all that little tricks that can make your Python life easier, perfect if you feel confident about your Python skills.</li>
+                    </ul>
+                    <span><h3>Django</h3><span>
+                    <ul>
+                        <li><a class="inlineLink" href="https://www.goodreads.com/book/show/51543267-django-crash-course"><strong>Django Crash Course:</strong></a>Starting in your django path? An excelent way to begin is whith this crash course, step by step this couple, Daniel and Audrey, explain a complete Django project.</li>
+                        <li><a class="inlineLink" href="https://djangoforbeginners.com/introduction/"><strong>Django for beginners:</strong></a>This one is the top sales Django books and you can see clearly why, my personal pocket guide when I'm stuck in some part on my Django project.</li>
+                        <li><a class="inlineLink" href="https://www.feldroy.com/books/two-scoops-of-django-3-x"><strong>Two Scoops of Django:</strong></a>If you ask somebody in the Django subreddit what is the best book to polish your Django skills, one and only one will be the answer, this book.</li>
+                    </ul>
+                    <p>Certainly there are a lot of video courses out where you can find useful information, but I'm always going to prefer a good book with key information where I can always open back and check what I am looking for...</p>
+                    <a class="inlineLink" href="https://www.feldroy.com/books/two-scoops-of-django-3-x"><strong>You want to recommend me a book?</strong></a>
                 </div>
             </section>
         <hr>
