Se agregaron iconos y trabaje en mis skills

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title> def Diego():</title>
+        <title> def diego():</title>
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <link rel="shortcut icon" href="{% static 'icons/favicon.svg' %}">
     </head>
     <body>
         <nav>
-            <a href="#">def Diego():</a>
+            <a href="{% url 'home' %}">def diego():</a>
             <div class="links">
+
+                <a href="{% url 'about' %}">about</a>
                 <a href="#">contact</a>
-                <a href="#">about</a>
             </div>
-
         </nav>
-
-
-
         {% block content %}
-{% endblock content %}
-
-
-<footer>
-    <p class="footerP">©2022 Diego Morales. All Rights Reserved.</p>
-</footer>
-</div>
-
-</body>
+        {% endblock content %}
+        <footer>
+            <p class="footerP">©2022 Diego Morales. All Rights Reserved.</p>
+        </footer>
+    </body>
 </html>
