--- a/portfolioapp/static/css/base.css
+++ b/portfolioapp/static/css/base.css
@@ -140,6 +140,18 @@ p.footerP {
     padding: 0px;
 }
 
+.wrapper{
+    display: flex;
+    align-items: center;
+}
+
+.skill{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 
 @media only screen and (max-width: 900px) {
     h1 {
