Edicion de skills

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,25 +6,49 @@
         <h1>def about():</h1>
         <h2><span>DIEGO_MORALES<span></h2>
         <div class="info">
-            <p>I'm a web developer based in <strong>Guadalajara, Mexico</strong> whos loves work with <strong>Python</strong>, and when I have option Django.</p>
+            <p>A highly enthusiastic mechatronics engineer; attracted to areas of Software, Digital image processing, Machine learning and Automation, kind personality and always committed with environment care.</p>
         </div>
     </section>
     <div class="imgGroup">
         <img src="{% static 'images/meBigger.jpg' %}" alt="" width="500px">
     </div>
+    <section>
+        <ul>
+            <li>
+                <div class="wrapper">
+                        <h3>SCHOOL</h3>
+                    <p>Ok ok, here's where all began, and starts with a Mechatronics enginner degree by the Instituto Tecnologico de Colima in 2019.</p>
+                </div>
+            </li>
+            <li>
+                <div class="wrapper">
+                        <h3>WOOORK</h3>
+                    <p>I used to work for Continental Automotive for 2 and a half years where I learn how to work with multidisciplinary from all over the world and experience solving real problems.</p>
+                </div>
+            </li>
+            <li>
+                <div class="wrapper">
+                        <h3>MASTER</h3>
+                    <p>And here we're now, I like the Software and I like to say Software likes me back, so I'm looking my specialitation in this enginner area, currently working in my tesis about the.................</p>
+                </div>
+            </li>
+        </ul>
+    </section>
     <hr>
     <section>
         <h2><span>SKILLS<span></h2>
+
         <div class="info">
+            <p>Did I mention I am Mechatronics enginner?</p>
             <div class="wrapper">
                 <div class="skill">
                     <img src="{% static 'icons/python.svg' %}" alt="" width="20px">
                     <p>Python</p>
                 </div>
-                <p>I use Python daily while building and maintaining webapps, wwriting scripts and solving personal problems.</p>
+                <p>Python is one of the most popular language out of there and you can see why, I personaly find Python very useful in my personal projects and I like to use it when I have the option.</p>
             </div>
             <div class="wrapper">
-                <p>I use Python daily while building and maintaining webapps, wwriting scripts and solving personal problems.</p>
+                <p>Django a Python web framework that I recently started to use it in all my project, .............</p>
 
                 <div class="skill">
                     <img src="{% static 'icons/django.svg' %}" alt="" width="20px">
@@ -37,7 +61,7 @@
                     <img src="{% static 'icons/html5.png' %}" alt="" width="20px">
                     <p>html</p>
                 </div>
-                <p>I use Python daily while building and maintaining webapps, wwriting scripts and solving personal problems.</p>
+                <p>HTML is the browser lenguage, HTML5 opens the semantic doors that all we need for the web with new tags that represent especific "ideas" what we can't do it before (header, aside, nava, etc...).</p>
             </div>
 
             <div class="wrapper">
