Se van a acomodar todo en la pagina principal

--- a/templates/about2.html
+++ b/templates/about2.html
@@ -45,10 +45,10 @@
                     <img src="{% static 'icons/python.svg' %}" alt="" width="20px">
                     <p>Python</p>
                 </div>
-                <p>I personaly find Python very useful in projects and I like to use it when I have the option.</p>
+                <p>Python is one of the most popular language out of there and you can see why, I personaly find Python very useful in my personal projects and I like to use it when I have the option.</p>
             </div>
             <div class="wrapper">
-                <p>Django a Python web framework that enables rapid development of secure and maintainable websites.</p>
+                <p>Django a Python web framework that I recently started to use it in all my project, .............</p>
 
                 <div class="skill">
                     <img src="{% static 'icons/django.svg' %}" alt="" width="20px">
@@ -61,11 +61,11 @@
                     <img src="{% static 'icons/html5.png' %}" alt="" width="20px">
                     <p>html</p>
                 </div>
-                <p>HTML is the browser lenguage and HTML 5 opens the semantic doors that all we need.</p>
+                <p>HTML is the browser lenguage, HTML5 opens the semantic doors that all we need with new tags that represent especific "ideas" what we can't do it before (header, aside, nava, etc...).</p>
             </div>
 
             <div class="wrapper">
-                <p>The design is a cornerstone on the web development and CSS3 facilitates.</p>
+                <p>I use Python daily while building and maintaining webapps, wwriting scripts and solving personal problems.</p>
                 <div class="skill">
                     <img src="{% static 'icons/css3.svg' %}" alt="" width="20px">
                     <p>ccs</p>
@@ -77,11 +77,11 @@
                     <img src="{% static 'icons/artificial.png' %}" alt="" width="20px">
                     <p>AI</p>
                 </div>
-                <p>The new meta out there, my first approach to machine learning was in the digital processing of images and I fell in love.</p>
+                <p>I use Python daily while building and maintaining webapps, wwriting scripts and solving personal problems.</p>
             </div>
 
             <div class="wrapper">
-                <p>The second language that I use the most, and my main in embedded projects.</p>
+                <p>I use Python daily while building and maintaining webapps, wwriting scripts and solving personal problems.</p>
                 <div class="skill">
                     <img src="{% static 'icons/c.png' %}" alt="" width="20px">
                     <p>C</p>
@@ -93,7 +93,7 @@
                     <img src="{% static 'icons/micro.png' %}" alt="" width="20px">
                     <p>Micros</p>
                 </div>
-                <p>In some systems that I develop I relly need precise control of mechanical parts, and Microcontrollers do the task, I work with STM & Atmel.</p>
+                <p>I use Python daily while building and maintaining webapps, wwriting scripts and solving personal problems.</p>
             </div>
 
 
