--- a/templates/home.html
+++ b/templates/home.html
@@ -39,11 +39,9 @@
             </ul>
             <span><h3>Django</h3><span>
             <ul>
-                <li><a class="inlineLink" href="https://www.goodreads.com/book/show/51543267-django-crash-course"><strong>Django Crash Course:</strong></a>Starting in your django path? An excelent way to begin is whith this crash course, step by step this couple, Daniel and Audrey, explain a complete Django project.</li>
-                <li><a class="inlineLink" href="https://djangoforbeginners.com/introduction/"><strong>Django for beginners:</strong></a>This one is the top sales Django books and you can see clearly why, my personal pocket guide when I'm stuck in some part on my Django project.</li>
+                <li><a class="inlineLink" href="https://djangoforbeginners.com/introduction/"><strong>Django for beginners:</strong></a>This one is the bestseller Django books and you can see clearly why, my personal pocket guide when I'm stuck in some part on my Django project.</li>
                 <li><a class="inlineLink" href="https://www.feldroy.com/books/two-scoops-of-django-3-x"><strong>Two Scoops of Django:</strong></a>If you ask somebody in the Django subreddit what is the best book to polish your Django skills, one and only one will be the answer, this book.</li>
             </ul>
-            <p>Certainly there are a lot of video courses out where you can find useful information, but I'm always going to prefer a good book with key information where I can always open back and check what I am looking for...</p>
             <a class="inlineLink" href="https://www.feldroy.com/books/two-scoops-of-django-3-x"><strong>You want to recommend me a book?</strong></a>
         </div>
     </section>
