--- a/templates/about.html
+++ b/templates/about.html
@@ -12,92 +12,28 @@
     <div class="imgGroup">
         <img src="{% static 'images/meBigger.jpg' %}" alt="" width="500px">
     </div>
-    <section>
-        <ul>
-            <li>
-                <div class="wrapper">
-                        <h3>SCHOOL</h3>
-                    <p>Ok ok, here's where all began, and starts with a Mechatronics enginner degree by the Instituto Tecnologico de Colima in 2019.</p>
-                </div>
-            </li>
-            <li>
-                <div class="wrapper">
-                        <h3>WOOORK</h3>
-                    <p>I used to work for Continental Automotive for 2 and a half years where I learn how to work with multidisciplinary from all over the world and experience solving real problems.</p>
-                </div>
-            </li>
-            <li>
-                <div class="wrapper">
-                        <h3>MASTER</h3>
-                    <p>And here we're now, I like the Software and I like to say Software likes me back, so I'm looking my specialitation in this enginner area, currently working in my tesis about the.................</p>
-                </div>
-            </li>
-        </ul>
-    </section>
+
     <hr>
     <section>
-        <h2><span>SKILLS<span></h2>
-
+        <h2><span>BOOKS?<span></h2>
         <div class="info">
-            <p>Did I mention I am Mechatronics enginner?</p>
-            <div class="wrapper">
-                <div class="skill">
-                    <img src="{% static 'icons/python.svg' %}" alt="" width="20px">
-                    <p>Python</p>
-                </div>
-                <p>I personaly find Python very useful in projects and I like to use it when I have the option.</p>
-            </div>
-            <div class="wrapper">
-                <p>Django a Python web framework that enables rapid development of secure and maintainable websites.</p>
-
-                <div class="skill">
-                    <img src="{% static 'icons/django.svg' %}" alt="" width="20px">
-                    <p>Django</p>
-                </div>
-            </div>
-
-            <div class="wrapper">
-                <div class="skill">
-                    <img src="{% static 'icons/html5.png' %}" alt="" width="20px">
-                    <p>html</p>
-                </div>
-                <p>HTML is the browser lenguage and HTML 5 opens the semantic doors that all we need.</p>
-            </div>
-
-            <div class="wrapper">
-                <p>The design is a cornerstone on the web development and CSS3 facilitates.</p>
-                <div class="skill">
-                    <img src="{% static 'icons/css3.svg' %}" alt="" width="20px">
-                    <p>ccs</p>
-                </div>
-            </div>
-
-            <div class="wrapper">
-                <div class="skill">
-                    <img src="{% static 'icons/artificial.png' %}" alt="" width="20px">
-                    <p>AI</p>
-                </div>
-                <p>The new meta out there, my first approach to machine learning was in the digital processing of images and I fell in love.</p>
-            </div>
-
-            <div class="wrapper">
-                <p>The second language that I use the most, and my main in embedded projects.</p>
-                <div class="skill">
-                    <img src="{% static 'icons/c.png' %}" alt="" width="20px">
-                    <p>C</p>
-                </div>
-            </div>
-
-            <div class="wrapper">
-                <div class="skill">
-                    <img src="{% static 'icons/micro.png' %}" alt="" width="20px">
-                    <p>Micros</p>
-                </div>
-                <p>In some systems that I develop I relly need precise control of mechanical parts, and Microcontrollers do the task, I work with STM & Atmel.</p>
-            </div>
-
-
+            <p><strong>That's incredible what you can learn in books.</strong></p>
+            <p>This is a few books recommendations that really improved my knowledge about the Web, Python, Django, CSS... Just have a look if you're interested in improving your skills.</p>
+            <span><h3>Python</h3><span>
+            <ul>
+                <li><a class="inlineLink" href="https://nostarch.com/pythoncrashcourse2e"><strong>Python Crash Course:</strong></a>This book was my first approach in my way to learn Python, it's all what you need if you know nothing about the language.</li>
+                <li><a class="inlineLink" href="https://realpython.com/products/python-basics-book/"><strong>Python Basics:</strong></a>A book written by Dan Bader, (My favorite Pythonista) the most complete guide of all the basic stuff that you need to work with Python.</li>
+                <li><a class="inlineLink" href="https://realpython.com/products/python-tricks-book/"><strong>Python Tricks:</strong></a>Another book by Dan Bader, in this one Dan talks about all that little tricks that can make your Python life easier, perfect if you feel confident about your Python skills.</li>
+            </ul>
+            <span><h3>Django</h3><span>
+            <ul>
+                                         <li><a class="inlineLink" href="https://www.goodreads.com/book/show/51543267-django-crash-course"><strong>Django Crash Course:</strong></a>Starting in your django path? An excelent way to begin is whith this crash course, step by step this couple, Daniel and Audrey, explain a complete Django project.</li>
+                <li><a class="inlineLink" href="https://djangoforbeginners.com/introduction/"><strong>Django for beginners:</strong></a>This one is the bestseller Django books and you can see clearly why, my personal pocket guide when I'm stuck in some part on my Django project.</li>
+                <li><a class="inlineLink" href="https://www.feldroy.com/books/two-scoops-of-django-3-x"><strong>Two Scoops of Django:</strong></a>If you ask somebody in the Django subreddit what is the best book to polish your Django skills, one and only one will be the answer, this book.</li>
+            </ul>
+            <a class="inlineLink" href="mailto: diegomorales1359@gmail.com"><strong>You want to recommend me a book?</strong></a>
         </div>
     </section>
+<hr>
 </div>
 {% endblock content %}
