--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,13 @@
             <div class="links">
 
                 <a href="{% url 'about' %}">about</a>
-                <a href="#">contact</a>
+                <a href="/#contact">contact</a>
             </div>
         </nav>
         {% block content %}
         {% endblock content %}
         <footer>
-            <p class="footerP">©2022 Diego Morales. All Rights Reserved.</p>
+            <p class="footerP">©2022 Diego Morales</p>
         </footer>
     </body>
 </html>
