Se reviso la ortografia

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,6 @@
     <div class="imgGroup">
         <img src="{% static 'images/meBigger.jpg' %}" alt="" width="500px">
     </div>
-
     <hr>
     <section>
         <h2><span>BOOKS?<span></h2>
@@ -27,13 +26,20 @@
             </ul>
             <span><h3>Django</h3><span>
             <ul>
-                                         <li><a class="inlineLink" href="https://www.goodreads.com/book/show/51543267-django-crash-course"><strong>Django Crash Course:</strong></a>Starting in your django path? An excelent way to begin is whith this crash course, step by step this couple, Daniel and Audrey, explain a complete Django project.</li>
+                <li><a class="inlineLink" href="https://www.goodreads.com/book/show/51543267-django-crash-course"><strong>Django Crash Course:</strong></a>Starting in your django path? An excellent way to begin is with this crash course, step by step this couple, Daniel and Audrey, explain a complete Django project.</li>
                 <li><a class="inlineLink" href="https://djangoforbeginners.com/introduction/"><strong>Django for beginners:</strong></a>This one is the bestseller Django books and you can see clearly why, my personal pocket guide when I'm stuck in some part on my Django project.</li>
                 <li><a class="inlineLink" href="https://www.feldroy.com/books/two-scoops-of-django-3-x"><strong>Two Scoops of Django:</strong></a>If you ask somebody in the Django subreddit what is the best book to polish your Django skills, one and only one will be the answer, this book.</li>
             </ul>
             <a class="inlineLink" href="mailto: diegomorales1359@gmail.com"><strong>You want to recommend me a book?</strong></a>
         </div>
     </section>
-<hr>
+    <hr>
+    <section>
+        <h2><span>HOBBIES<span></h2>
+        <div class="info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ullamcorper non nunc id maximus. Mauris suscipit, purus sed dictum egestas, metus justo consectetur arcu, quis scelerisque ante purus non justo.</p>
+        </div>
+    </section>
+    <hr>
 </div>
 {% endblock content %}
