--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
@@ -8,37 +7,35 @@
         <h2><span>WHOISDIEGO<span></h2>
         <div class="info">
             <p>Hi, I'm Diego Morales.<br>
-            <p>I'm a web developer based in <strong>Guadalajara, Mexico</strong> whos loves work with <strong>Python</strong>, currently I'm pursuing a master's degree in software engineerings.</p>
-            <p class="importante">At the moment I'm engaged to simple, minimal design & typography and this is my first online porfolio. Feel free to explore & tell me what you think about it!</p>
+            <p>I'm a web developer based in <strong>Guadalajara, Mexico</strong> who loves to work with <strong>Python</strong>, currently I'm pursuing a master's degree in software engineerings</p>
+            <p class="importante">At the moment I'm engaged to simple, minimal design & typography and this is my first online portfolio. Feel free to explore & tell me what you think about it!</p>
             <p><a class="inlineLink"href="{% url 'about' %}"><strong>More about me? Oh...</strong></a> </p>
         </div>
     </section>
     <hr>
-
     <section>
-                <h2><span>MY PATH<span></h2>
+        <h2><span>MY PATH<span></h2>
         <ul>
             <li>
                 <div class="wrapper">
-                        <h3>SCHOOL</h3>
-                    <p>Ok ok, here's where all began, and starts with a Mechatronics enginner degree by the Instituto Tecnologico de Colima in 2019.</p>
+                    <h3>SCHOOL</h3>
+                    <p>Ok ok, here's where all began, and starts with a Mechatronics engineer degree by the Instituto Tecnologico de Colima in 2019.</p>
                 </div>
             </li>
             <li>
                 <div class="wrapper">
-                        <h3>WOOORK</h3>
+                    <h3>WOOORK</h3>
                     <p>I used to work for Continental Automotive for 2 and a half years where I learn how to work with multidisciplinary from all over the world and experience solving real problems.</p>
                 </div>
             </li>
             <li>
                 <div class="wrapper">
-                        <h3>MASTER</h3>
-                    <p>And here we're now, I like the Software and I like to say Software likes me back, so I'm looking my specialitation in this enginner area, currently working in my tesis about the.................</p>
+                    <h3>MASTER</h3>
+                    <p>And here we're now, I like the Software and I like to say Software likes me back, so I'm looking my specialization in this engineer area, currently working in my thesis about the.................</p>
                 </div>
             </li>
         </ul>
     </section>
-
     <hr>
     <section>
         <h2><span>RECENT WORK<span></h2>
@@ -52,10 +49,8 @@
         <img class="generic" src="{% static 'images/work3.png' %}" alt="">
     </div>
     <hr>
-
     <section>
         <h2><span>SKILLS<span></h2>
-
         <div class="info">
             <p>Did I mention I am Mechatronics enginner?</p>
             <div class="wrapper">
@@ -63,25 +58,22 @@
                     <img src="{% static 'icons/python.svg' %}" alt="" width="20px">
                     <p>Python</p>
                 </div>
-                <p>I personaly find Python very useful in projects and I like to use it when I have the option.</p>
+                <p>I personally find Python very useful in projects and I like to use it when I have the option.</p>
             </div>
             <div class="wrapper">
                 <p>Django a Python web framework that enables rapid development of secure and maintainable websites.</p>
-
                 <div class="skill">
                     <img src="{% static 'icons/django.svg' %}" alt="" width="20px">
                     <p>Django</p>
                 </div>
             </div>
-
             <div class="wrapper">
                 <div class="skill">
                     <img src="{% static 'icons/html5.png' %}" alt="" width="20px">
                     <p>html</p>
                 </div>
-                <p>HTML is the browser lenguage and HTML 5 opens the semantic doors that all we need.</p>
+                <p>HTML is the browser language and HTML 5 opens the semantic doors that all we need.</p>
             </div>
-
             <div class="wrapper">
                 <p>The design is a cornerstone on the web development and CSS3 facilitates.</p>
                 <div class="skill">
@@ -89,7 +81,6 @@
                     <p>ccs</p>
                 </div>
             </div>
-
             <div class="wrapper">
                 <div class="skill">
                     <img src="{% static 'icons/artificial.png' %}" alt="" width="20px">
@@ -97,36 +88,30 @@
                 </div>
                 <p>The new meta out there, my first approach to machine learning was in the digital processing of images and I fell in love.</p>
             </div>
-
             <div class="wrapper">
-                <p>The second language that I use the most, and my main in embedded projects.</p>
+                <p>The second language that I use the most, and my main in embedded system projects.</p>
                 <div class="skill">
                     <img src="{% static 'icons/c.png' %}" alt="" width="20px">
                     <p>C</p>
                 </div>
             </div>
-
             <div class="wrapper">
                 <div class="skill">
                     <img src="{% static 'icons/micro.png' %}" alt="" width="20px">
                     <p>Micros</p>
                 </div>
-                <p>In some systems that I develop I relly need precise control of mechanical parts, and Microcontrollers do the task, I work with STM & Atmel.</p>
+                <p>In some systems that I develop I really need precise control of mechanical parts, and Microcontrollers do the task, I work with STM & Atmel.</p>
             </div>
-
-
         </div>
     </section>
-
     <hr>
-
     <section id="contact">
-    <h2><span>CONTACT<span></h2>
-    <div class="info">
-    <p>My email: <a class="inlineLink" href="mailto: diegomorales1359@gmail.com"><strong>Diegomorales1359@gmail.com</strong></a></p>
-    <p>Github: <a class="inlineLink" href="https://github.com/DiegoMoralesBravo"><strong>DiegoMoralesBravo</strong><img src="{% static 'icons/github.svg' %}" alt="" width="20px"> </a></p>
+        <h2><span>CONTACT<span></h2>
+        <div class="info">
+            <p>My email: <a class="inlineLink" href="mailto: diegomorales1359@gmail.com"><strong>Diegomorales1359@gmail.com</strong></a></p>
+            <p>Github: <a class="inlineLink" href="https://github.com/DiegoMoralesBravo"><strong>DiegoMoralesBravo</strong><img src="{% static 'icons/github.svg' %}" alt="" width="20px"> </a></p>
     </section>
     <hr>
-</div>
+    </div>
 </div>
 {% endblock content %}
